@@ -13,8 +13,8 @@ module ActiveMerchant #:nodoc:
         'dankort'            => ->(num) { num =~ /^5019\d{12}$/ },
         'maestro'            => ->(num) { (12..19).cover?(num&.size) && in_bin_range?(num.slice(0, 6), MAESTRO_RANGES) },
         'forbrugsforeningen' => ->(num) { num =~ /^600722\d{10}$/ },
-        'sodexo'             => ->(num) { num =~ /^(606071|603389|606070|606069|606068|600818)\d{8}$/ },
-        'vr'                 => ->(num) { num =~ /^(627416|637036)\d{8}$/ },
+        'sodexo'             => ->(num) { num =~ /^(606071|603389|606070|606069|606068|600818)\d{10}$/ },
+        'vr'                 => ->(num) { num =~ /^(627416|637036)\d{10}$/ },
         'carnet'             => lambda { |num|
           num&.size == 16 && (
             in_bin_range?(num.slice(0, 6), CARNET_RANGES) ||
