@@ -7,7 +7,11 @@ class RemoteMundipaggTest < Test::Unit::TestCase
     @amount = 100
     @credit_card = credit_card('4000100011112224')
     @declined_card = credit_card('4000300011112220')
-    @voucher = credit_card('60607044957644', brand: 'sodexo')
+    @sodexo_voucher = credit_card('6060704495764400', brand: 'sodexo')
+    # Mundipagg only allows certain card numbers for success and failure scenarios.
+    # As such, we cannot use a card number with a BIN belonging to VR.
+    # See https://docs.mundipagg.com/docs/simulador-de-voucher.
+    @vr_voucher = credit_card('4000000000000010', brand: 'vr')
     @options = {
       billing_address: address({neighborhood: 'Sesame Street'}),
       description: 'Store Purchase'
@@ -39,9 +43,16 @@ class RemoteMundipaggTest < Test::Unit::TestCase
     assert_success response
   end
 
-  def test_successful_purchase_with_voucher
+  def test_successful_purchase_with_sodexo_voucher
     @options.update(holder_document: '93095135270')
-    response = @gateway.purchase(@amount, @voucher, @options)
+    response = @gateway.purchase(@amount, @sodexo_voucher, @options)
+    assert_success response
+    assert_equal 'Simulator|Transação de simulação autorizada com sucesso', response.message
+  end
+
+  def test_successful_purchase_with_vr_voucher
+    @options.update(holder_document: '93095135270')
+    response = @gateway.purchase(@amount, @vr_voucher, @options)
     assert_success response
     assert_equal 'Simulator|Transação de simulação autorizada com sucesso', response.message
   end
@@ -111,18 +122,36 @@ class RemoteMundipaggTest < Test::Unit::TestCase
     assert_success void
   end
 
-  def test_successful_void_with_voucher
+  def test_successful_void_with_sodexo_voucher
     @options.update(holder_document: '93095135270')
-    auth = @gateway.purchase(@amount, @voucher, @options)
+    auth = @gateway.purchase(@amount, @sodexo_voucher, @options)
     assert_success auth
 
     assert void = @gateway.void(auth.authorization)
     assert_success void
   end
 
-  def test_successful_refund_with_voucher
+  def test_successful_void_with_vr_voucher
     @options.update(holder_document: '93095135270')
-    auth = @gateway.purchase(@amount, @voucher, @options)
+    auth = @gateway.purchase(@amount, @vr_voucher, @options)
+    assert_success auth
+
+    assert void = @gateway.void(auth.authorization)
+    assert_success void
+  end
+
+  def test_successful_refund_with_sodexo_voucher
+    @options.update(holder_document: '93095135270')
+    auth = @gateway.purchase(@amount, @sodexo_voucher, @options)
+    assert_success auth
+
+    assert void = @gateway.refund(1, auth.authorization)
+    assert_success void
+  end
+
+  def test_successful_refund_with_vr_voucher
+    @options.update(holder_document: '93095135270')
+    auth = @gateway.purchase(@amount, @vr_voucher, @options)
     assert_success auth
 
     assert void = @gateway.refund(1, auth.authorization)
